fix(net): AsynchronousSocketChannel close() never unblocks in-flight clone reads
Investigated the WebSocketIntegrationTests pass/fail-ratio-inversion flag from the
known-issues doc (was FAIL 72/48/24, then FAIL 72/24/48, never actually looked at).
Fresh measurement: FAIL 72/52/20, stable across 5 runs. Per-sub-test breakdown shows
this was never a real inversion -- JettyWebSocketClient and ReactorNettyWebSocketClient
are 100% reliable (48/48), while TomcatWebSocketClient (the one client backed by
java.nio.channels.AsynchronousSocketChannel) fails 20/24 stably. The two historical
samples are two different snapshots of this same still-actively-being-fixed area
(native-io/src/async_socket.rs has 3 Tomcat-websocket-client fix commits in the days
leading up to this session).

CRATONVM_DBG_AIO tracing (new permanent opt-in diagnostic, same pattern as
socket_channel.rs's CRATONVM_DBG_SC_READ) shows the actual network I/O completes
correctly byte-for-byte for every failing combo -- handshake, and where relevant the
WS-level close-frame exchange, all succeed -- then the Java-level session/Mono simply
never resolves. That remaining hang is a Java-level Tomcat/Spring session-lifecycle
issue this session could not trace further into and is left OPEN (see known-issues
doc section 5.7 for the full writeup and repro).

One genuine, independently-verified bug found along the way (confirmed via re-test
that it does NOT fix the hang above -- aio_asc_close is never even called on the
failing path): aio_asc_close/aio_assc_close only removed the registry/fd_table entry,
never actually shutting down the socket, so a worker thread already blocked in a
handler-form read on an independent try_clone()'d duplicate fd was left hanging
forever on close() -- a real AsynchronousCloseException-contract violation. Fixed by
shutdown(Both) on the socket (unblocks every fd sharing the open-file-description,
including in-flight clones) before removing the entry, for both the legacy
aio_registry id spac